# astra

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Readme.md
.github/workflows/: astra-ci-doc.yml  astra-ci-jobs.yml  astra-ci.yml
.github/workflows/pre-install-py-packages/: action.yml
benchmark/: kelvin_helmholtz.ini  launch.py  read.py  script_adastra_mi250.sh  script_adastra_mi300.sh  script_jz_h100.sh
doc/: python_requirements.txt
doc/source/: commandline.rst  conf.py  configuration.rst  index.rst  input_file.rst  output.rst  quickstart.rst
problem/: advection.ini  burgers.ini  hydro_turbulence.ini  kelvin_helmholtz.ini  logo.ini  logo.py  mri.ini
pytools/: astraTest.py  vtk_io.py
src/: CMakeLists.txt  arrays.hpp  astra.hpp  astrapy.cpp  astrapy.hpp  checkNan.hpp  fft.cpp  fft.hpp  field.hpp  global.cpp  global.hpp  grid.cpp  grid.hpp  gridhost.hpp  input.cpp  input.hpp  license_header.txt  logger.hpp  loop.hpp  main.cpp  mpi.hpp  profiler.cpp  profiler.hpp  reduce.hpp  subgrid.cpp  subgrid.hpp  test.cpp  test.hpp  transpose.hpp
src/initFlow/: CMakeLists.txt  initFlow.cpp  initFlow.hpp
src/output/: CMakeLists.txt  dump.cpp  dump.hpp  dumpVariables.cpp  dumpVariables.hpp  output.cpp  output.hpp  slice.cpp  slice.hpp  vtk.cpp  vtk.hpp
src/output/timevar/: CMakeLists.txt  timevar.cpp  timevar.hpp  timevarEnergy.cpp  timevarEnergy.hpp  timevarEnstrophy.cpp  timevarEnstrophy.hpp  timevarMinMax.cpp  timevarMinMax.hpp  timevarSpectrum.cpp  timevarSpectrum.hpp  timevarStress.cpp  timevarStress.hpp
src/rightHandSide/: CMakeLists.txt  advection.cpp  advection.hpp  boussinesq.hpp  burgers.hpp  compressible_hydro.hpp  hydro.cpp  hydro.hpp  mhd.hpp  rightHandSide.hpp  rightHandSideFactory.hpp
src/shear/: CMakeLists.txt  linearshear.hpp  noshear.hpp  shear.hpp
src/timeIntegrator/: CMakeLists.txt  euler.hpp  rk2.hpp  rk3.hpp  timeIntegrator.hpp  timeIntegratorFactory.hpp
src/utils/: CMakeLists.txt  bigEndian.hpp  npy.hpp
test/: python_requirements.txt  test.py
test/advection/: advection_X_euler.ini  advection_X_rk2.ini  advection_X_rk3.ini  advection_Y_rk3.ini  advection_Z_rk3.ini  validate.py
test/shearing_wave/: astra.ini  shearing_wave_test.py  validate.py
test/shearing_wave_compressible/: astra.ini  shearing_wave_test.py  validate.py
test/shearing_wave_mhd/: astra.ini  shearing_wave_test.py  validate.py
test/sod-iso/: astra.ini  sod_test.py  validate.py
validation/advection/: validate.py
validation/advection/vtk/: data.0000.vtk  data.0001.vtk
